--- a/Vocab_ReadingsATHKArgumentsThinking.Rmd
+++ b/Vocab_ReadingsATHKArgumentsThinking.Rmd
@@ -23,7 +23,7 @@ Quiz yourself with this webpage that doesn't show the definition, and subsequent
 
 <!-- Critical Thinking, by Paul and Elder -->
 
-* *ArgumentsIntro* on Elearning in the **Lectures:Alex's stuff** folder.
+* *ArgumentsIntro* on Canvas linked from Week 8: Resources
 
 * [Galef on confirmation bias](http://ideas.ted.com/why-you-think-youre-right-even-when-youre-wrong/), which she refers to as **soldier mind**
 
